Bug 1186782 - [TB/SM] Fix undefined reference to vtable for mozilla::mail::DirectoryProvider r=jcranmer a=bustage fix for CLOSED TREE